# project-1

./: .gitignore  README.md  pyproject.toml  run_webcam.sh
config/: config.json
deploy/: spine.service
src/spine/: camera.py  config.py  feedback.py  filter.py  main.py  mapping.py  metrics.py  pose.py  servo.py  stepper.py
src/spine/tools/: __init__.py  baseline_calibrate.py  servo_calibrate.py
tests/: test_config_feedback.py  test_hunch_mapping.py  test_pose_backend.py  test_software_feedback.py
