[project]
name = "project-1"
version = "0.1.0"
requires-python = ">= 3.11"
dependencies = [
  "mediapipe==0.10.9; sys_platform == 'darwin'",
  "mediapipe==0.10.13; sys_platform == 'linux' and platform_machine == 'aarch64'",
  "mediapipe==0.10.13; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "pyobjc-framework-Cocoa>=12.0; sys_platform == 'darwin'",
  "numpy>=1.24.0",
  "opencv-python>=4.8.0",
  "adafruit-blinka>=8.22.0",
  "adafruit-circuitpython-pca9685>=3.4.10",
  "adafruit-circuitpython-motor>=3.4.9",
]

[project.scripts]
spine-run = "spine.main:main"
spine-servo-calibrate = "spine.tools.servo_calibrate:main"
spine-baseline-calibrate = "spine.tools.baseline_calibrate:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
